--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -445,27 +445,6 @@
 
 // Room and suites
 .room_and_suites {
-  .banner-text {
-    position: relative;
-    p {
-      // position: absolute;
-      // top: 0;
-      // left: 0;
-      // right: 0;
-      -webkit-text-stroke-width: 1px;
-      -webkit-text-stroke-color: rgba(102, 102, 102, 0.7);
-      font-family: 'Gilda Display';
-      font-size: 200px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      text-transform: uppercase;
-      margin-bottom: 0;
-      color: $white;
-      text-wrap: nowrap;
-      transform: translate(-8%, -33%);
-    }
-  }
   .room-card-wrapper {
     display: flex;
     gap: 50px;
@@ -516,6 +495,15 @@
   }
   .card-wrapper {
     margin-top: 46px;
+  }
+}
+
+// Testimonial Area
+.testimonial-area {
+  .banner-text {
+    p {
+      transform: translate(-8%, -17%);
+    }
   }
 }
 
