add: testimonial-slider area

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -23,7 +23,9 @@ $text-primary: #4566d4;
 $text-gray-light: #6a6c73;
 $border-color: #e0e0e0;
 $background: #f8f5f0;
+$yellow: #f2c94c;
+$gray-4: #bdbdbd;
 
-$body-font: "Barlow Condensed", sans-serif;
-$heading-font: "Gilda Display", serif;
-$font-awesome: "Font Awesome 6 Pro";
+$body-font: 'Barlow Condensed', sans-serif;
+$heading-font: 'Gilda Display', serif;
+$font-awesome: 'Font Awesome 6 Pro';
