--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,190 +42,191 @@ Footer
 
 ===========================*/
 /* Theme Default CSS */
-@import "variables";
-@import "mixin";
-@import "partials/theme-default";
-@import "partials/default-spacing";
-@import "unittest";
-@import "keyframes";
+@import 'variables';
+@import 'mixin';
+@import 'partials/theme-default';
+@import 'partials/default-spacing';
+@import 'partials/custom-spacing';
+@import 'unittest';
+@import 'keyframes';
 
 // 1.Preloader
-@import "modules/preeloader";
+@import 'modules/preeloader';
 
 // 2.Scrollup
-@import "partials/scrollup";
+@import 'partials/scrollup';
 
 // 3.Nav Menu
-@import "partials/header";
-@import "partials/header-two";
-@import "partials/header-three";
-@import "partials/header-four";
-@import "partials/header-five";
-@import "partials/header-six";
-@import "partials/header-seven";
-@import "modules/meanmenu";
-@import "partials/menu-sidebar";
-@import "partials/title-section";
+@import 'partials/header';
+@import 'partials/header-two';
+@import 'partials/header-three';
+@import 'partials/header-four';
+@import 'partials/header-five';
+@import 'partials/header-six';
+@import 'partials/header-seven';
+@import 'modules/meanmenu';
+@import 'partials/menu-sidebar';
+@import 'partials/title-section';
 
 // 4.Slider Section
-@import "modules/slider/slider-style-one";
-@import "modules/slider/slider-style-two";
-@import "modules/slider/slider-style-three";
-@import "modules/slider/slider-style-four";
-@import "modules/slider/slider-style-five";
-@import "modules/slider/slider-style-six";
+@import 'modules/slider/slider-style-one';
+@import 'modules/slider/slider-style-two';
+@import 'modules/slider/slider-style-three';
+@import 'modules/slider/slider-style-four';
+@import 'modules/slider/slider-style-five';
+@import 'modules/slider/slider-style-six';
 
 // 5.Info Card
-@import "modules/info-card/info-card";
-@import "modules/info-card/info-card-two";
-@import "modules/info-card/info-card-three";
-@import "modules/info-card/info-card-four";
-@import "modules/info-card/info-card-five";
+@import 'modules/info-card/info-card';
+@import 'modules/info-card/info-card-two';
+@import 'modules/info-card/info-card-three';
+@import 'modules/info-card/info-card-four';
+@import 'modules/info-card/info-card-five';
 
 // 6.Icon Card
-@import "modules/icon-card/icon-card";
-@import "modules/icon-card/icon-card-two";
-@import "modules/icon-card/icon-card-three";
-@import "modules/icon-card/icon-card-four";
-@import "modules/icon-card/icon-card-five";
+@import 'modules/icon-card/icon-card';
+@import 'modules/icon-card/icon-card-two';
+@import 'modules/icon-card/icon-card-three';
+@import 'modules/icon-card/icon-card-four';
+@import 'modules/icon-card/icon-card-five';
 
 // 7.About Image Card
-@import "modules/about-image-card/about-image-card-two";
-@import "modules/about-image-card/about-image-card-one";
-@import "modules/about-image-card/about-image-card-four";
-@import "modules/about-image-card/about-image-card-three";
-@import "modules/about-image-card/about-image-card-five";
+@import 'modules/about-image-card/about-image-card-two';
+@import 'modules/about-image-card/about-image-card-one';
+@import 'modules/about-image-card/about-image-card-four';
+@import 'modules/about-image-card/about-image-card-three';
+@import 'modules/about-image-card/about-image-card-five';
 
 // Timeline Card
-@import "modules/timeline-card";
+@import 'modules/timeline-card';
 
 // 8.About Info Card
-@import "modules/about-info-card/about-info-card";
-@import "modules/about-info-card/about-info-card-two";
-@import "modules/about-info-card/about-info-card-five";
-@import "modules/about-info-card/info-group-card";
+@import 'modules/about-info-card/about-info-card';
+@import 'modules/about-info-card/about-info-card-two';
+@import 'modules/about-info-card/about-info-card-five';
+@import 'modules/about-info-card/info-group-card';
 
 // 9.Counter Card
-@import "modules/counter/counter-card";
-@import "modules/counter/counter-card-two";
-@import "modules/counter/counter-card-three";
-@import "modules/counter/counter-card-four";
+@import 'modules/counter/counter-card';
+@import 'modules/counter/counter-card-two';
+@import 'modules/counter/counter-card-three';
+@import 'modules/counter/counter-card-four';
 
 // 10.Process Step Card
-@import "modules/process-step/process-step";
+@import 'modules/process-step/process-step';
 
 // 10.Brand Marquee
-@import "modules/brand-marquee/brand-marquee";
+@import 'modules/brand-marquee/brand-marquee';
 
 // 11.Testimonial Card
-@import "modules/testimonial-card/testimonial-card";
-@import "modules/testimonial-card/testimonial-card-two";
-@import "modules/testimonial-card/testimonial-card-three";
-@import "modules/testimonial-card/testimonial-card-four";
-@import "modules/testimonial-card/testimonial-card-five";
-@import "modules/testimonial-card/testimonial-slider-card";
+@import 'modules/testimonial-card/testimonial-card';
+@import 'modules/testimonial-card/testimonial-card-two';
+@import 'modules/testimonial-card/testimonial-card-three';
+@import 'modules/testimonial-card/testimonial-card-four';
+@import 'modules/testimonial-card/testimonial-card-five';
+@import 'modules/testimonial-card/testimonial-slider-card';
 
 // 12.Accordion Card
-@import "modules/accordion/accordion";
-@import "modules/accordion/accordion-style-two";
-@import "modules/accordion/accordion-style-three";
+@import 'modules/accordion/accordion';
+@import 'modules/accordion/accordion-style-two';
+@import 'modules/accordion/accordion-style-three';
 
 // 13.Client Logo Card
-@import "modules/client-logo/client-logo";
+@import 'modules/client-logo/client-logo';
 
 // 14.Post Card
-@import "modules/post-card/post-card";
-@import "modules/post-card/post-card-one";
-@import "modules/post-card/post-card-two";
-@import "modules/post-card/post-card-three";
-@import "modules/post-card/post-card-four";
-@import "modules/post-card/post-card-five";
-@import "modules/post-card/post-card-six";
-@import "modules/post-card/post-details";
+@import 'modules/post-card/post-card';
+@import 'modules/post-card/post-card-one';
+@import 'modules/post-card/post-card-two';
+@import 'modules/post-card/post-card-three';
+@import 'modules/post-card/post-card-four';
+@import 'modules/post-card/post-card-five';
+@import 'modules/post-card/post-card-six';
+@import 'modules/post-card/post-details';
 
 // 15.Skill Progress Card
-@import "modules/skill-progress";
+@import 'modules/skill-progress';
 
 // 16.Price Card
-@import "modules/price-card";
+@import 'modules/price-card';
 
 // 17.Call To Action Card
-@import "modules/call-to-action-card";
+@import 'modules/call-to-action-card';
 
 // 18.Title Card
-@import "partials/title-section";
+@import 'partials/title-section';
 
 // 19.Breadcrumb
-@import "modules/breadcrumb/breadcrumb";
+@import 'modules/breadcrumb/breadcrumb';
 
 // 20.Pagination's
-@import "modules/paginations";
-@import "modules/nav-tabs";
+@import 'modules/paginations';
+@import 'modules/nav-tabs';
 
 // 21.Project Details Page
-@import "pages/project-details";
-@import "modules/list-item";
+@import 'pages/project-details';
+@import 'modules/list-item';
 
 // 22.Sidebar
-@import "partials/sidebar";
-@import "partials/sidebar-two";
+@import 'partials/sidebar';
+@import 'partials/sidebar-two';
 
 // 23.Comment List
-@import "modules/comment-list";
+@import 'modules/comment-list';
 
 // 24.Comment Form
-@import "modules/comment-form";
+@import 'modules/comment-form';
 
 // 25.Team Member
-@import "modules/team/team-member";
-@import "modules/team/team-slider-controls";
+@import 'modules/team/team-member';
+@import 'modules/team/team-slider-controls';
 
 // 26.Portfolio
-@import "modules/portfolio/portfolio";
-@import "modules/portfolio/portfolio-two";
+@import 'modules/portfolio/portfolio';
+@import 'modules/portfolio/portfolio-two';
 //@import "modules/portfolio/portfolio-slider-controls";
 
 // Image Card
-@import "modules/image-card/image-card";
+@import 'modules/image-card/image-card';
 
 // Video Popup Modal Card
-@import "modules/video-popup-card/video-popup-card";
-@import "modules/video-popup-card/video-popup-card-two";
-@import "modules/video-popup-card/video-popup-card-three";
+@import 'modules/video-popup-card/video-popup-card';
+@import 'modules/video-popup-card/video-popup-card-two';
+@import 'modules/video-popup-card/video-popup-card-three';
 
 //Portfolio Slider
-@import "modules/project-card/project-card";
-@import "modules/project-card/project-card-two";
-@import "modules/project-card/project-card-three";
+@import 'modules/project-card/project-card';
+@import 'modules/project-card/project-card-two';
+@import 'modules/project-card/project-card-three';
 
 // Masonry Portfolio Gallery
-@import "modules/masonary-portfolio-gallery/masonary-portfolio-gallery";
+@import 'modules/masonary-portfolio-gallery/masonary-portfolio-gallery';
 
 // Pages
-@import "pages/pages";
+@import 'pages/pages';
 
 // 27.About Page
-@import "pages/about-page";
+@import 'pages/about-page';
 
 // 28.Contact Page
-@import "pages/contact-page";
+@import 'pages/contact-page';
 
 // 29.Service Page
-@import "pages/service-page";
+@import 'pages/service-page';
 
 // 30.Team Page
-@import "pages/team-member";
+@import 'pages/team-member';
 
 // Footer
-@import "partials/footer";
-@import "partials/footer-two";
-@import "partials/footer-three";
-@import "partials/footer-four";
-@import "partials/footer-five";
-@import "partials/footer-six";
+@import 'partials/footer';
+@import 'partials/footer-two';
+@import 'partials/footer-three';
+@import 'partials/footer-four';
+@import 'partials/footer-five';
+@import 'partials/footer-six';
 
 // Checknow
-@import "modules/checknow/checknow";
+@import 'modules/checknow/checknow';
 
 // Roomc-card
-@import "modules/room-card/room-card";
+@import 'modules/room-card/room-card';
